# internal/delivery/docs/swagger.yaml
@@ -587,6 +587,30 @@ definitions:
           $ref: '#/definitions/dto.TrainingCover'
         type: array
     type: object
+  dto.TrainingCoverTrainer:
+    properties:
+      description:
+        type: string
+      exercises:
+        type: integer
+      id:
+        type: integer
+      is_confirm:
+        type: boolean
+      name:
+        type: string
+      wants_public:
+        type: boolean
+    type: object
+  dto.TrainingCoverTrainerPagination:
+    properties:
+      cursor:
+        type: integer
+      objects:
+        items:
+          $ref: '#/definitions/dto.TrainingCoverTrainer'
+        type: array
+    type: object
   dto.TrainingCreate:
     properties:
       description:
@@ -608,6 +632,36 @@ definitions:
         type: array
       name:
         type: string
+    type: object
+  dto.TrainingCreateTrainer:
+    properties:
+      description:
+        type: string
+      exercises:
+        items:
+          $ref: '#/definitions/dto.ExerciseStep'
+        type: array
+      name:
+        type: string
+      wants_public:
+        type: boolean
+    type: object
+  dto.TrainingTrainer:
+    properties:
+      description:
+        type: string
+      exercises:
+        items:
+          $ref: '#/definitions/dto.ExerciseBaseStep'
+        type: array
+      id:
+        type: integer
+      is_confirm:
+        type: boolean
+      name:
+        type: string
+      wants_public:
+        type: boolean
     type: object
   dto.UpdateStatusService:
     properties:
@@ -2257,6 +2311,37 @@ paths:
       summary: Set Exercise Status
       tags:
       - Trainings
+  /api/training/{training_id}/trainer:
+    get:
+      consumes:
+      - application/json
+      description: Get a training by ID for trainer
+      parameters:
+      - description: Training ID
+        in: path
+        name: training_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Return training
+          schema:
+            $ref: '#/definitions/dto.TrainingTrainer'
+        "400":
+          description: Invalid training ID
+          schema:
+            $ref: '#/definitions/responses.MessageResponse'
+        "404":
+          description: No training with such ID
+          schema:
+            $ref: '#/definitions/responses.MessageResponse'
+        "500":
+          description: Internal server error
+      summary: Get Training Trainer
+      tags:
+      - Trainings
   /api/training/base:
     post:
       consumes:
@@ -2499,6 +2584,82 @@ paths:
         "500":
           description: Internal server error
       summary: Delete Scheduled Training
+      tags:
+      - Trainings
+  /api/training/trainer:
+    get:
+      consumes:
+      - application/json
+      description: Get trainer training covers with optional search and trainer ID
+        filter
+      parameters:
+      - description: Access token
+        in: header
+        name: access_token
+        required: true
+        type: string
+      - description: Search term
+        in: query
+        name: search
+        type: string
+      - description: Cursor for pagination
+        in: query
+        name: cursor
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Return training covers
+          schema:
+            $ref: '#/definitions/dto.TrainingCoverTrainerPagination'
+        "400":
+          description: Bad query or JWT provided
+          schema:
+            $ref: '#/definitions/responses.MessageResponse'
+        "401":
+          description: JWT is expired or invalid
+          schema:
+            $ref: '#/definitions/responses.MessageResponse'
+        "500":
+          description: Internal server error
+      summary: Get Trainer Training Covers
+      tags:
+      - Trainings
+    post:
+      consumes:
+      - application/json
+      description: Create a training for a trainer
+      parameters:
+      - description: Access token
+        in: header
+        name: access_token
+        required: true
+        type: string
+      - description: Training data to create
+        in: body
+        name: training
+        required: true
+        schema:
+          $ref: '#/definitions/dto.TrainingCreateTrainer'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Training successfully created
+          schema:
+            $ref: '#/definitions/responses.CreatedIDResponse'
+        "400":
+          description: Bad body or JWT provided
+          schema:
+            $ref: '#/definitions/responses.MessageResponse'
+        "401":
+          description: JWT is expired or invalid
+          schema:
+            $ref: '#/definitions/responses.MessageResponse'
+        "500":
+          description: Internal server error
+      summary: Create Training Trainer
       tags:
       - Trainings
   /api/training/user:
